--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "license": "MIT",
   "dependencies": {
+    "@hpcc-js/wasm": "^1.2.0",
     "d3": "^6.5.0",
+    "d3-graphviz": "^3.1.0",
     "dagre-d3": "^0.6.4",
     "node-fetch": "^2.6.1",
     "react": "^16.14.0",
