--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.14.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.13.8",
     "parcel": "^1.12.4",
     "purescript": "^0.13.8",
     "spago": "^0.16.0"
